resources/kube/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-sippy
    app.kubernetes.io/component: kube-sippy
    app.kubernetes.io/instance: kube-sippy
  name: kube-sippy
  namespace: sippy
spec:
  ports:
  - name: www
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 2112
    protocol: TCP
  selector:
    deploymentconfig: kube-sippy
  sessionAffinity: None
  type: ClusterIP
